# YesThread

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.github/: copilot-instructions.md
components/esp_ieee802154_lib/: CMakeLists.txt
components/kroschuthread_protocol/: CMakeLists.txt  kroschuthread_commands - Copy.c  kroschuthread_commands.c  kroschuthread_nodeid.c  kroschuthread_ota.c  kroschuthread_protocol.c  kroschuthread_radio.c  kroschuthread_receiver.c
components/kroschuthread_protocol/include/: kroschuthread_commands.h  kroschuthread_nodeid.h  kroschuthread_ota.h  kroschuthread_protocol.h  kroschuthread_radio.h
main/: CMakeLists.txt  current.c  debug_minimal.c  extreme.c  kroschuthread.c  receiver.c  recv.c  sender.c
