idf_component_register(
    SRCS
        "kroschuthread_protocol.c"
        "kroschuthread_radio.c"
        "kroschuthread_receiver.c"
        "kroschuthread_nodeid.c"
        "kroschuthread_commands.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_hw_support
        ieee802154
        driver
        freertos
        log
        nvs_flash
        esp_driver_usb_serial_jtag
    PRIV_REQUIRES
        esp_timer
)
