idf_component_register(
    SRCS
        "kroschuthread_protocol.c"
        "kroschuthread_radio.c"
        "kroschuthread_receiver.c"
        "kroschuthread_nodeid.c"
        "kroschuthread_ota.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_hw_support
        ieee802154
        driver
        freertos
        log
        nvs_flash
        spiffs
        spi_flash
        vfs
        app_update
        mbedtls
    PRIV_REQUIRES
        esp_timer
)
